<resources>
    <string name="app_name">GlamLooks</string>
    <string name="not_yet_registered_sign_up">not_yet_registered_sign_up</string>
    <string name="password1">password</string>
    <string name="loginEmail">loginEmail</string>
    <string name="login1">Login</string>
    <string name="not_yet_registered_">No Account? Sign Up</string>
    <string name="login">GlamLooks</string>
    <string name="sign_up1">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="already_an_user_login">"Already,have Account? "</string>
    <string name="LastName">LastName</string>
    <string name="FirstName">FirstName</string>
    <string name="backbutton">BackButton</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="gmail">Gmail</string>
    <string name="logout">logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_home"> Home </string>
    <string name="navigation_dashboard"> profile </string>
    <string name="navigation_notifications"> logout </string>
    <string name="aboutus">AboutUs</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="edit_account_details">Edit account details</string>
    <string name="personal_info">personal_info</string>
    <string name="full_name">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="products">Products</string>
    <string name="AboutUS">AboutUS</string>
    <string name="profile">Profile</string>
    <string name="laser">laser</string>
    <string name="shaving">shaving</string>
    <string name="hair_color">hair_color</string>
    <string name="nails">nails</string>
    <string name="haircut">haircut</string>
    <string name="about_us">About Us</string>
    <string name="back_button">Back Button</string>
    <string name="about_us_n">About Us\n</string>
    <string name="our_hair_salon_is_open_5_days_a_week_n_we_offer_a_wide_range_of_services_n_for_you_n_n_n">Our hair salon is open 6 days a week\n We offer a wide range of services\n for you\n</string>
    <string name="sunday_9_00_to_12_00_n_13_00_to_18_00">Sunday: 9:00 to 12:00\n 13:00 to 18:00</string>
    <string name="create_account">create account</string>
    <string name="call">call</string>
    <string name="monday_9_00_to_11_00_n_13_00_to_18_00">Monday: 9:00 to 11:00\n 13:00 to 18:00</string>
    <string name="tuesday_closed">Tuesday: closed</string>
    <string name="wednesday_9_00_to_12_00_n_13_00_to_18_00">Wednesday: 9:00 to 12:00\n 13:00 to 18:00</string>
    <string name="friday_9_00_to_12_00">Friday: 9:00 to 12:00</string>
    <string name="saturday_closed_n_n_n">Saturday: Closed\n\n</string>
    <string name="phone_0123456789">phone: 0123456789</string>
    <string name="our_address_1234_main_street_n_anytown_ca_12345_usa">Our Address: 1234 Main Street, \n Anytown, CA 12345 USA</string>
    <string name="talk_to_us_via_whatsapp">Talk to us via WhatsApp!</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="thursday_9_00_to_12_00_n_13_00_to_18_00">Thursday: 9:00 to 12:00\n 13:00 to 18:00</string>
    <string name="your_upcoming_appointments_n" />
    <string name="manager">Manager?</string>
    <string name="service_name">Service Name</string>
    <string name="costservice">CostService</string>
    <string name="duration">duration</string>
    <string name="call_manager">Call Manager</string>
    <string name="service_namee">Service Name:</string>
    <string name="time_date">Time/Date:</string>
    <string name="manager_name">Manager Name:</string>
    <string name="durationn">Duration:</string>
    <string name="glamlooks">GlamLooks</string>
    <string name="logout_remove">logout_remove</string>
    <string name="remove_account">Remove Account</string>
    <string name="remove_account1">Remove Account</string>
    <string name="hii_manager_welcome_to_glamlooks">Hii Manager, Welcome to GlamLooks!</string>
</resources>